Implement first version of query endpoints
