# ferelight/models/__init__.py
@@ -2,3 +2,7 @@
 # import models into model package
 from ferelight.models.multimediaobject import Multimediaobject
 from ferelight.models.multimediasegment import Multimediasegment
+from ferelight.models.objectinfos_post_request import ObjectinfosPostRequest
+from ferelight.models.query_post200_response_inner import QueryPost200ResponseInner
+from ferelight.models.query_post_request import QueryPostRequest
+from ferelight.models.segmentinfos_post_request import SegmentinfosPostRequest
