# ferelight/openapi/openapi.yaml
@@ -27,6 +27,110 @@ paths:
           description: OK
       summary: Get the information of an object.
       x-openapi-router-controller: ferelight.controllers.default_controller
+  /objectinfos:
+    post:
+      operationId: objectinfos_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/_objectinfos_post_request'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/multimediaobject'
+                type: array
+          description: OK
+      summary: Get the information of multiple objects.
+      x-openapi-router-controller: ferelight.controllers.default_controller
+  /objectsegments/{objectid}:
+    get:
+      operationId: objectsegments_objectid_get
+      parameters:
+      - description: The unique identifier of the object.
+        explode: false
+        in: path
+        name: objectid
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/multimediasegment'
+                type: array
+          description: OK
+      summary: Get the segments of an object.
+      x-openapi-router-controller: ferelight.controllers.default_controller
+  /query:
+    post:
+      operationId: query_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/_query_post_request'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/_query_post_200_response_inner'
+                type: array
+          description: OK
+      summary: Query the FERElight engine.
+      x-openapi-router-controller: ferelight.controllers.default_controller
+  /segmentinfo/{segmentid}:
+    get:
+      operationId: segmentinfo_segmentid_get
+      parameters:
+      - description: The unique identifier of the segment.
+        explode: false
+        in: path
+        name: segmentid
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/multimediasegment'
+          description: OK
+      summary: Get the information of a segment.
+      x-openapi-router-controller: ferelight.controllers.default_controller
+  /segmentinfos:
+    post:
+      operationId: segmentinfos_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/_segmentinfos_post_request'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/multimediasegment'
+                type: array
+          description: OK
+      summary: Get the information of multiple segments.
+      x-openapi-router-controller: ferelight.controllers.default_controller
 components:
   schemas:
     multimediaobject:
@@ -55,26 +159,89 @@ components:
       title: multimediaobject
       type: object
     multimediasegment:
+      example:
+        segmentend: 1.4658129805029452
+        segmentnumber: 0
+        segmentid: segmentid
+        segmentstart: 6.027456183070403
+        segmentstartabs: 5.962133916683182
+        objectid: objectid
+        segmentendabs: 5.637376656633329
       properties:
         segmentid:
           description: The unique identifier of the segment.
+          title: segmentid
           type: string
         objectid:
           description: The unique identifier of the object.
+          title: objectid
           type: string
         segmentnumber:
           description: The segment number.
+          title: segmentnumber
           type: integer
         segmentstart:
           description: The start frame of the segment.
+          title: segmentstart
           type: number
         segmentend:
           description: The end frame of the segment.
+          title: segmentend
           type: number
         segmentstartabs:
           description: The double value of the start time in seconds of the segment.
+          title: segmentstartabs
           type: number
         segmentendabs:
           description: The double value of the end time in seconds of the segment.
+          title: segmentendabs
           type: number
+      title: multimediasegment
+      type: object
+    _objectinfos_post_request:
+      properties:
+        objectids:
+          description: The unique identifiers of the objects.
+          items:
+            type: string
+          title: objectids
+          type: array
+      title: _objectinfos_post_request
+      type: object
+    _segmentinfos_post_request:
+      properties:
+        segmentids:
+          description: The unique identifiers of the segments.
+          items:
+            type: string
+          title: segmentids
+          type: array
+      title: _segmentinfos_post_request
+      type: object
+    _query_post_request:
+      properties:
+        similaritytext:
+          description: The similarity text.
+          title: similaritytext
+          type: string
+        ocrtext:
+          description: The OCR text.
+          title: ocrtext
+          type: string
+      title: _query_post_request
+      type: object
+    _query_post_200_response_inner:
+      example:
+        score: 0.8008281904610115
+        segmentid: segmentid
+      properties:
+        segmentid:
+          description: The unique identifier of the segment.
+          title: segmentid
+          type: string
+        score:
+          description: The similarity score of the segment.
+          title: score
+          type: number
+      title: _query_post_200_response_inner
       type: object
